build_error.txt
   Compiling hayate-viewer-rust v0.2.5-TEST (I:\HayateViewer_Rust)
warning: unused import: `crate::image::cache::DecodedImage`
 --> src\image\loader.rs:5:5
  |
5 | use crate::image::cache::DecodedImage;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `is_none` found for reference `&(usize, std::option::Option<(&Direct2D::ID2D1Bitmap1, D2D_SIZE_F)>)` in the current scope
   --> src\main.rs:603:89
    |
603 | ...                   if indices.len() == 2 && images_info.iter().any(|info| info.is_none()) {
    |                                                                                   ^^^^^^^ method not found in `&(usize, std::option::Option<(&Direct2D::ID2D1Bitmap1, D2D_SIZE_F)>)`
    |
help: one of the expressions' fields has a method of the same name
    |
603 |                             if indices.len() == 2 && images_info.iter().any(|info| info.1.is_none()) {
    |                                                                                         ++

error[E0599]: no method named `is_some` found for reference `&&(usize, std::option::Option<(&Direct2D::ID2D1Bitmap1, D2D_SIZE_F)>)` in the current scope
   --> src\main.rs:604:100
    |
604 | ...                   if let Some(Some((_, size))) = images_info.iter().find(|info| info.is_some()) {
    |                                                                                          ^^^^^^^ method not found in `&&(usize, std::option::Option<(&Direct2D::ID2D1Bitmap1, D2D_SIZE_F)>)`
    |
help: one of the expressions' fields has a method of the same name
    |
604 |                                 if let Some(Some((_, size))) = images_info.iter().find(|info| info.1.is_some()) {
    |                                                                                                    ++

error[E0308]: mismatched types
   --> src\main.rs:604:45
    |
604 | ...                   if let Some(Some((_, size))) = images_info.iter().find(|info| info.is_some()) {
    |                                   ^^^^^^^^^^^^^^^    ---------------------------------------------- this expression has type `std::option::Option<&(usize, std::option::Option<(&Direct2D::ID2D1Bitmap1, D2D_SIZE_F)>)>`
    |                                   |
    |                                   expected `(usize, Option<(&ID2D1Bitmap1, ...)>)`, found `Option<_>`
    |
    = note: expected tuple `(usize, std::option::Option<(&Direct2D::ID2D1Bitmap1, D2D_SIZE_F)>)`
                found enum `std::option::Option<_>`

error: future cannot be sent between threads safely
   --> src\image\loader.rs:43:9
    |
 43 | /         tokio::spawn(async move {
 44 | |             let mut current_source: Option<ImageSource> = None;
 45 | |             let mut current_path_key: String = String::new();
 46 | |             let mut queue = std::collections::VecDeque::new();
...   |
138 | |         });
    | |__________^ future created by async block is not `Send`
    |
    = help: within `{async block@src\image\loader.rs:43:22: 43:32}`, the trait `Send` is not implemented for `std::sync::MutexGuard<'_, ImageCache>`
note: future is not `Send` as this value is used across an await
   --> src\image\loader.rs:121:95
    |
119 | ...                   let mut c = cache_clone.lock().unwrap();
    |                           ----- has type `std::sync::MutexGuard<'_, ImageCache>` which is not `Send`
120 | ...                   c.insert(key.clone(), Arc::new(decoded));
121 | ...                   let _ = res_tx.send(LoaderResponse::Loaded { index }).await;
    |                                                                             ^^^^^ await occurs here, with `mut c` maybe used later
note: required by a bound in `tokio::spawn`
   --> C:\Users\Tatsumaki\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.48.0\src\task\spawn.rs:171:21
    |
169 |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
    |            ----- required by a bound in this function
170 |     where
171 |         F: Future + Send + 'static,
    |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
   --> src\image\loader.rs:43:9
    |
 43 | /         tokio::spawn(async move {
 44 | |             let mut current_source: Option<ImageSource> = None;
 45 | |             let mut current_path_key: String = String::new();
 46 | |             let mut queue = std::collections::VecDeque::new();
...   |
138 | |         });
    | |__________^ future created by async block is not `Send`
    |
    = help: the trait `Send` is not implemented for `dyn StdError`
note: future is not `Send` as this value is used across an await
   --> src\image\loader.rs:121:95
    |
117 | ...                   match source.load_image(index) {
    |                             ------------------------ has type `std::result::Result<DecodedImage, Box<dyn StdError>>` which is not `Send`
...
121 | ...                           let _ = res_tx.send(LoaderResponse::Loaded { index }).await;
    |                                                                                     ^^^^^ await occurs here, with `source.load_image(index)` maybe used later
note: required by a bound in `tokio::spawn`
   --> C:\Users\Tatsumaki\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.48.0\src\task\spawn.rs:171:21
    |
169 |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
    |            ----- required by a bound in this function
170 |     where
171 |         F: Future + Send + 'static,
    |                     ^^^^ required by this bound in `spawn`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `hayate-viewer-rust` (bin "hayate-viewer-rust") generated 1 warning
error: could not compile `hayate-viewer-rust` (bin "hayate-viewer-rust") due to 5 previous errors; 1 warning emitted
